Fixed UI spacing issues, changed menu links, switched default post login url to “Dashboard”.

--- a/assets/default/default/styles/style.css
+++ b/assets/default/default/styles/style.css
@@ -1049,6 +1049,10 @@ div.logo img {
   padding-bottom:1em;
 }
 
+.margin-1 {
+  margin: 1px;
+}
+
 .margin-5 {
   margin: 5px;
 }
